Fix booking form malfunctioning on small screens

--- a/booking/static/booking/css/styles.css
+++ b/booking/static/booking/css/styles.css
@@ -189,6 +189,13 @@ a.user-button:hover {
   color: #ffffff;
   font-weight: bolder;
 }
+
+select[name="court"] {
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+}
+
 ul.errorlist.nonfield {
   background-color: #ffbf00; /* dark amber background */
   color: #000; /* black text */
